SERVER-30114 Add simple slow spinlock monitoring