src/third_party/gperftools-2.5/src/base/spinlock.cc
@@ -49,6 +49,47 @@ const base::LinkerInitialized SpinLock::LINKER_INITIALIZED =
     base::LINKER_INITIALIZED;
 
 namespace {
+
+constexpr int64_t kNanoPerSec = uint64_t{1000} * 1000 * 1000;
+
+#ifdef _WIN32
+int64_t frequency;
+
+void InitTimer() {
+    LARGE_INTEGER large_freq;
+    QueryPerformanceFrequency(&large_freq);
+    frequency = large_freq.QuadPart;
+}
+
+int64_t NowMonotonic() {
+  LARGE_INTEGER time_value;
+  QueryPerformanceCounter(&time_value);
+  return time_value.QuadPart;
+}
+
+int64_t TicksToNanos(int64_t timer_value) {
+  return timer_value * kNanoPerSec / frequency;
+}
+
+#else // _WIN32
+void InitTimer() {}
+
+int64_t NowMonotonic() {
+  struct timespec t;
+
+  if (clock_gettime(CLOCK_MONOTONIC, &t)) {
+    return 0;
+  }
+
+  return (static_cast<double>(t.tv_sec) * kNanoPerSec) + t.tv_nsec;
+}
+
+int64_t TicksToNanos(int64_t timer_value) {
+  return timer_value;
+}
+
+#endif // _WIN32
+
 struct SpinLock_InitHelper {
   SpinLock_InitHelper() {
     // On multi-cpu machines, spin for longer before yielding
@@ -56,6 +97,8 @@ struct SpinLock_InitHelper {
     if (GetSystemCPUsCount() > 1) {
       adaptive_spin_count = 1000;
     }
+
+    InitTimer();
   }
 };
 
@@ -84,10 +127,13 @@ Atomic32 SpinLock::SpinLoop() {
                                               kSpinLockSleeper);
 }
 
+base::subtle::Atomic64 SpinLock::totalDelayNanos_ = 0;
+
 void SpinLock::SlowLock() {
   Atomic32 lock_value = SpinLoop();
 
   int lock_wait_call_count = 0;
+  int64_t start = 0;
   while (lock_value != kSpinLockFree) {
     // If the lock is currently held, but not marked as having a sleeper, mark
     // it as having a sleeper.
@@ -115,11 +161,34 @@ void SpinLock::SlowLock() {
     }
 
     // Wait for an OS specific delay.
+    start = NowMonotonic();
     base::internal::SpinLockDelay(&lockword_, lock_value,
                                   ++lock_wait_call_count);
     // Spin again after returning from the wait routine to give this thread
     // some chance of obtaining the lock.
     lock_value = SpinLoop();
+  }
+
+  if (start) {
+    base::subtle::Atomic64 delta = TicksToNanos(NowMonotonic() - start);
+    base::subtle::Atomic64 base_value = GetTotalDelayNanos();
+    base::subtle::Atomic64 new_value;
+    do {
+      base::subtle::NoBarrier_Store(&new_value, base::subtle::NoBarrier_Load(&base_value) 
+            + base::subtle::NoBarrier_Load(&delta));
+
+      // Swap in the new incremented value.
+      base::subtle::Atomic64 orig_value = base::subtle::Acquire_CompareAndSwap(
+            &SpinLock::totalDelayNanos_, base_value, new_value);
+
+      // Check if the increment succeeded.
+      if (orig_value == base_value) {
+              break;
+      }
+
+      // If the increment failed, just use the previous value as the value to add our delta to.
+      base_value = orig_value;
+    } while (true);
   }
 }
 
